# nanopb_bzlmod_test

./: .gitignore  BUILD.bazel  MODULE.bazel  packet.proto
