module(name = "nanopb_bzlmod_test")

bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "nanopb")
git_override(
    module_name = "nanopb",
    commit = "27a308698c673688722e354e064f19911e1cd7e9",
    remote = "https://github.com/mark64/nanopb",
)
